<resources>
    <string name="app_name">TaskMaster</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="today_s_tasks">Today\'s Tasks</string>
    <string name="add_task">Add Task</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="new_task">New Task</string>
    <string name="enter_the_task_title">Enter The Task Title</string>
    <string name="enter_the_task_description">Enter The Task Description</string>
    <string name="save_task">Save Task</string>
    <string name="update_task">Update Task</string>
    <string name="loading">Loading...</string>
    <string name="enter_search_title">Enter Search Title</string>
</resources>