<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="10dp"
    app:cardBackgroundColor="@color/white"
    style="@style/cardViewStyle"
    app:cardElevation="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleTaskText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/new_task"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/closeImg"
            android:layout_width="40dp"
            android:layout_height="42dp"
            android:src="@drawable/ic_close"
            android:layout_margin="8dp"
            android:layout_alignParentEnd="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_below="@+id/titleTaskText"
            android:background="@color/blue"
            android:id="@+id/viewHLine"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/viewHLine"
            android:orientation="vertical"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="16dp"
            android:layout_centerHorizontal="true">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_title"
                android:id="@+id/addTaskTitleL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTaskTitle"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="#EAE4E8"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.App.TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_the_task_description"
                android:id="@+id/addTaskDiscL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/addTaskDisc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top|start"
                    android:lines="5"
                    android:maxLines="5"
                    android:background="#EAE4E8"
                    android:inputType="textMultiLine"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/saveTaskBtn"
                android:layout_width="wrap_content"
                android:layout_height="?actionBarSize"
                android:text="@string/save_task"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:textSize="20sp"
                android:backgroundTint="@color/blue"
                style="@style/Widget.App.Button.Filled"/>

        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>