<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBgColor"
    tools:context=".MainActivity">
    
    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/headTxt"
            android:layout_marginTop="16dp"
            android:layout_centerHorizontal="true"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/taskTodayTxt"
            android:layout_below="@id/headTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_centerHorizontal="true"
            android:text="@string/today_s_tasks"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/sortImg"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_above="@id/searchTitleL"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_sort"
            />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/SearchInputLayout"
            android:layout_below="@id/taskTodayTxt"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/searchTitleL"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="10dp"
            app:startIconDrawable="@drawable/ic_search"
            app:errorEnabled="false"
            app:hintEnabled="false">


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:inputType="text"
                android:imeOptions="actionSearch"
                android:hint="@string/enter_search_title"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/taskRV"
            android:layout_below="@id/searchTitleL"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingBottom="100dp"
            android:overScrollMode="never"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/task_view_layout"/>

    </RelativeLayout>

    </androidx.core.widget.NestedScrollView>



    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/taskAddBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/add_task"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        app:icon="@drawable/ic_add_circle"
        app:iconTint="@color/white"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>